MS-ENLACE / movimientos unicos y todos UTT

--- a/libs/config/config.yml
+++ b/libs/config/config.yml
@@ -47,6 +47,10 @@ production: &default
         movimientos:
           usuario:
             crear: movimiento_crear_usuario
+            ultimo: movimiento_ultimo_usuario
+            todos: movimiento_todos_usuario
+            retiro:
+              verifica: movimiento_retiro_verifica_usuario
   carpetas:
     publicas:
       publica: public
@@ -115,5 +119,7 @@ development:
         movimientos:
           usuario:
             crear: movimiento_crear_usuario
+            ultimo: movimiento_ultimo_usuario
+            todos: movimiento_todos_usuario
             retiro:
               verifica: movimiento_retiro_verifica_usuario
