MS-ENLACE / Proceso comunicación MS-COOP operación retiro

--- a/libs/config/config.yml
+++ b/libs/config/config.yml
@@ -50,6 +50,7 @@ production: &default
             ultimo: movimiento_ultimo_usuario
             todos: movimiento_todos_usuario
             retiro:
+              crear: movimiento_retiro_crear_usuario
               verifica: movimiento_retiro_verifica_usuario
   carpetas:
     publicas:
@@ -122,4 +123,5 @@ development:
             ultimo: movimiento_ultimo_usuario
             todos: movimiento_todos_usuario
             retiro:
+              crear: movimiento_retiro_crear_usuario
               verifica: movimiento_retiro_verifica_usuario
