--- a/libs/config/config.yml
+++ b/libs/config/config.yml
@@ -57,6 +57,8 @@ production: &default
             todos: movimiento_todos_usuario
             retiro:
               crear: movimiento_retiro_crear_usuario
+              aceptar: movimiento_retiro_aceptar_usuario
+              eliminar: movimiento_retiro_eliminar_usuario              
               verifica: movimiento_retiro_verifica_usuario
   carpetas:
     publicas:
@@ -136,4 +138,6 @@ development:
             todos: movimiento_todos_usuario
             retiro:
               crear: movimiento_retiro_crear_usuario
+              aceptar: movimiento_retiro_aceptar_usuario
+              eliminar: movimiento_retiro_eliminar_usuario
               verifica: movimiento_retiro_verifica_usuario
