--- a/libs/config/config.yml
+++ b/libs/config/config.yml
@@ -50,6 +50,7 @@ production: &default
       procesos:
         prestamos:
           validacion: prestamos_validacion
+          crear: prestamos_crear
         movimientos:
           depositos:
             general: movimientos_depositos
@@ -135,6 +136,7 @@ development:
       procesos:
         prestamos:
           validacion: prestamos_validacion
+          crear: prestamos_crear
         movimientos:
           depositos:
             general: movimientos_depositos
